# backendRoads

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.txt  docker-compose.dev.yml  docker-compose.yml
cmake/: ProjectOptions.cmake
conan/: README.md
cots/: README.md
docker/: entrypoint.sh
migrations/: 0000_schema_migrations.sql  0001_init.sql
scripts/: migrate.sh
src/: CMakeLists.txt  main.cpp
src/config/: app_config.cpp  app_config.hpp  database.cpp  database.hpp  environment.cpp  environment.hpp
src/controllers/: auth_controller.cpp  auth_controller.hpp
src/repositories/: pqxx_user_repository.cpp  pqxx_user_repository.hpp  user_repository.hpp
src/services/: auth_service.cpp  auth_service.hpp  jwt_token_service.cpp  jwt_token_service.hpp  token_service.hpp
src/utils/: http_utils.cpp  http_utils.hpp  jwt_utils.cpp  jwt_utils.hpp
tests/: CMakeLists.txt  app_config_test.cpp  auth_service_test.cpp
